# content-aware-shrink

./: .gitignore  Cargo.toml  README.md  generate_animation.sh
src/: lib.rs  main.rs
tests/: usage.rs
