[package]
name = "content-aware-shrink"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dary_heap = "0.3.6"
env_logger = { version = "0.11", default-features = false, features = ["color", "auto-color", "humantime"] }
image = "0.25"
log = "0.4.19"
pathfinding = "4.2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = "limited" # profiling is useless otherwise
